# nihonn_ru

./: Cargo.toml
src/: api_handle.rs  api_request.rs  command.rs  command_handler.rs  constants.rs  handles.rs  jisho.rs  main.rs  prelude.rs  setup.rs  test_req.rs
src/command/: definition.rs  explain.rs  mod.rs  play.rs  reading.rs  word.rs
src/commands/: definition.rs  explain.rs  mod.rs  play.rs  reading.rs  word.rs
