[package]
name = "nihonn_ru"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
reqwest = "0.12.22"
serde = "1.0.219"
tokio = { version ="1.46.1", features = ["full"]}
natural-tts = { version = "0.2.1", features = ["parler"]}
phf = { version = "0.12.1", features = ["macros"]}

[[bin]]
name = "nihonn_ru"
path = "src/main.rs"
